[package]
name = "brainfuck"
about = "A brainfuck intepreter CLI"
version = "0.1.0"
edition = "2021"
author = "p1xelHer0"

[dependencies]
anyhow = { version = "1.0.70" }
clap = { version = "4.2.2", features = ["derive"] }
clap_mangen = {version = "0.2.10"}
clap-verbosity-flag = { version = "2.0.1" }
indicatif = { version = "0.17.3" }
log = { version = "0.4.17" }
owo-colors = { version = "3.5.0" }

[dev-dependencies]
assert_cmd = { version = "2.0.11" }
assert_fs = { version = "1.0.13" }
predicates = { version = "3.0.3" }
